--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<h2 class="heading">JOIN US</h2>
 				<ul class="social-icon">
 					
-					<li><a href="https://wa.me/message/JI3UFNAYTI75J1" class="fa fa-whatsapp wow bounceIn" data-wow-delay="0.9s"></a></li>
+					<li><a href="https://chat.whatsapp.com/LKOFGQcIjcc8gB2bAcYuAE" class="fa fa-whatsapp wow bounceIn" data-wow-delay="0.9s"></a></li>
 					
 				</ul>
 			</div>
